--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,22 +48,40 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-    compile('org.web3j:core:3.0.1-android')
+    implementation('org.web3j:core:3.0.1-android')
 
-    compile 'com.github.apl-devs:appintro:v4.2.2'
-    compile "com.android.support:support-v4:$support_library_version"
-    compile "com.android.support:design:$support_library_version"
+    implementation 'com.github.apl-devs:appintro:v4.2.2'
+    implementation "com.android.support:design:$support_library_version"
+
+    implementation "com.android.support:customtabs:$support_library_version"
+    implementation "com.android.support:support-annotations:$support_library_version"
+    implementation "com.android.support:support-core-utils:$support_library_version"
 
 
-    compile "org.jetbrains.anko:anko-appcompat-v7-commons:$anko_version"
-    compile "org.jetbrains.anko:anko-coroutines:$anko_version"
-    compile "org.jetbrains.anko:anko-sqlite:$anko_version"
+    implementation "org.jetbrains.anko:anko-appcompat-v7-commons:$anko_version"
+    implementation "org.jetbrains.anko:anko-coroutines:$anko_version"
+    implementation "org.jetbrains.anko:anko-sqlite:$anko_version"
 
-    compile 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.google.code.gson:gson:2.8.2'
 
-    compile "com.android.support:cardview-v7:$support_library_version"
+    implementation "com.android.support:cardview-v7:$support_library_version"
 
-    compile "com.google.firebase:firebase-auth:$firebase_version"
-    compile "com.google.android.gms:play-services-auth:$firebase_version"
+    //twiter
+    implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
 
+    implementation "com.google.firebase:firebase-auth:$firebase_version"
+
+    implementation "com.google.android.gms:play-services-auth:$firebase_version"
+
+    implementation ('com.facebook.android:facebook-login:[4,5)'){
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude group: 'com.android.support', module: 'appcompat-v7'
+        exclude group: 'com.android.support', module: 'cardview-v7'
+        exclude group: 'com.android.support', module: 'customtabs'
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.android.support', module: 'support-core-utils'
+    }//end fb lib exclude
 }
+
+//apply google services
+apply plugin: 'com.google.gms.google-services'
