--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
@@ -83,6 +84,8 @@ dependencies {
     }//end fb lib exclude
 
     implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
+
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
 
 //apply google services
